--- a/LMS.System.Blazor/LMS.System.Blazor.csproj
+++ b/LMS.System.Blazor/LMS.System.Blazor.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +22,6 @@
 
 
     <ItemGroup>
-        <PackageReference Include="MudBlazor" Version="8.*"/>
+        <PackageReference Include="MudBlazor" Version="8.*" />
     </ItemGroup>
 </Project>
